--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Travel Hub</title>
   </head>
   <body>
+    <script src="js/index.js"></script>
     <nav class="navbar font-lt">
       <a href="#" class="navbar-brand">Travel Hub</a>
       <ul class="navbar-menu">
@@ -22,6 +23,33 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    
+
+    <div class="home-container">
+      <!-- Title -->
+      <div class="title-container">
+        <h1 class="font-lg">Your Trusted Travel Agent's</h1>
+        <h4 class="font-lt">Your happiness is our happiness</h4>
+      </div>
+
+      <div class="homeContent-container">
+        <!-- Corusel -->
+        <div class="carousel">
+          <div class="slide">
+            <img src="src/slide1.jpg" alt="Image 1" />
+          </div>
+          <div class="slide">
+            <img src="src/slide2.jpg" alt="Image 2" />
+          </div>
+          <div class="slide">
+            <img src="src/slide3.jpg" alt="Image 3" />
+          </div>
+        </div>
+
+        <!-- Form -->
+        <div class="contactUs-container">
+          <h1 class="font-lg">Contact Us</h1>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
