all ui done, no js update

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <a href="#" class="navbar-brand">Travel Hub</a>
       <ul class="navbar-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Our Packages</a></li>
+        <li><a href="#">Call to Action</a></li>
       </ul>
     </nav>
 
@@ -130,17 +129,89 @@
       <div class="underHome2-container">
         <img src="./src/promo.jpg" alt="" />
         <div class="promo-container">
-          <h1 class="font-lg">Your Trusted Travel Agent's Your Happiness is Our Priority!</h1>
+          <h1 class="font-lg">
+            Your Trusted Travel Agent's Your Happiness is Our Priority!
+          </h1>
           <ul class="font-lt">
             <li>Personalized Itineraries: Tailored just for you.</li>
             <li>Stress-Free Booking: We handle the details</li>
             <li>Exclusive Deals: Unlock unbeatable discounts.</li>
-            <li>Expert Guidance: Our knowledgeable team provides insider tips and recommendations.</li>
-            <li>24/7 Support: Assistance is available round-the-clock, ensuring peace of mind throughout your journey.</li>
+            <li>
+              Expert Guidance: Our knowledgeable team provides insider tips and
+              recommendations.
+            </li>
+            <li>
+              24/7 Support: Assistance is available round-the-clock, ensuring
+              peace of mind throughout your journey.
+            </li>
           </ul>
         </div>
       </div>
     </div>
+
+    <div class="package-container">
+      <div class="title-package">
+        <h1 class="font-lg">Our Packages</h1>
+      </div>
+
+      <div class="package">
+        <div class="satu-package">
+          <img src="/src/package1.png" alt="" />
+          <div class="package-desc">
+            <h3 class="font-md">Bali</h3>
+            <h5 class="font-lt">
+              Temukan keindahan Bali! Terjunlah ke dalam budaya yang
+              berwarna-warni, pemandangan yang menakjubkan, dan pantai yang
+              tenang.
+            </h5>
+          </div>
+        </div>
+        <div class="satu-package">
+          <img src="/src/package2.png" alt="" />
+          <div class="package-desc">
+            <h3 class="font-md">Jogja</h3>
+            <h5 class="font-lt">
+              Tentukan pesonanya! Jelajahi keindahan Jogja dengan budayanya yang
+              kaya, keindahan alamnya yang menakjubkan, dan pesonanya yang
+              memikat. Kunjungi candi, nikmati kuliner khas, dan rasakan suasana
+              magisnya. Pesan sekarang dan raih pengalaman tak terlupakan!
+            </h5>
+          </div>
+        </div>
+        <div class="satu-package">
+          <img src="/src/package3.png" alt="" />
+          <div class="package-desc">
+            <h3 class="font-md">Bandung</h3>
+            <h5 class="font-lt">
+              Nikmati Bandung yang memikat! Temukan keunikan kulinernya,
+              keindahan alamnya yang menakjubkan, dan suasana kota yang
+              bersemangat. Jelajahi tempat-tempat wisata menarik, berbelanja di
+              pasar tradisional, dan rasakan keramahannya yang luar biasa. Pesan
+              sekarang dan buat kenangan yang tak terlupakan!
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="call-container">
+      <h1 class="font-lg">Are You Ready?</h1>
+      <p class="font-md">
+        Ready to embark on your next adventure? Explore our exclusive travel
+        packages, handcrafted just for you! Book now and let's make your dream
+        getaway a reality. Start your journey today!
+      </p>
+      <button class="btn font-md call-btn">Call to Action !</button>
+    </div>
+
+    <footer>
+      <h1 class="font-lg">Travel Hub</h1>
+      <div class="footer-content">
+        <h4 class="font-lt">Terms of Services</h4>
+        <h4 class="font-lt">Privacy Policy</h4>
+      </div>
+      <h4 class="font-lt">© 2024 Andi Mataraja</h4>
+    </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
