all js done, responsive done

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav class="navbar font-md">
       <a href="#" class="navbar-brand">Travel Hub</a>
       <ul class="navbar-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Our Packages</a></li>
-        <li><a href="#">Call to Action</a></li>
+        <li><a href="#home-container">Home</a></li>
+        <li><a href="#package-container">Our Packages</a></li>
+        <li><a href="#call-container">Call to Action</a></li>
       </ul>
     </nav>
 
-    <div class="home-container">
+    <div class="home-container" id="home-container">
       <!-- Title -->
       <div class="title-container">
         <h1 class="font-lg" style="font-size: 75px">
@@ -149,7 +149,7 @@
       </div>
     </div>
 
-    <div class="package-container">
+    <div class="package-container" id="package-container">
       <div class="title-package">
         <h1 class="font-lg">Our Packages</h1>
       </div>
@@ -194,7 +194,7 @@
       </div>
     </div>
 
-    <div class="call-container">
+    <div class="call-container" id="call-container">
       <h1 class="font-lg">Are You Ready?</h1>
       <p class="font-md">
         Ready to embark on your next adventure? Explore our exclusive travel
@@ -212,6 +212,8 @@
       </div>
       <h4 class="font-lt">© 2024 Andi Mataraja</h4>
     </footer>
+
+
     <script src="js/index.js"></script>
   </body>
 </html>
